# condottiere

./: .gitignore  README.md  SPEC.md  pyproject.toml
.prime/: lab.json
.prime/lab/docs/: index.md
.prime/lab/templates/configs/gepa/: gpt-oss.toml
.prime/skills/brainstorm/: .prime-managed-link
.prime/skills/browse-environments/: .prime-managed-link
.prime/skills/create-environments/: .prime-managed-link
.prime/skills/evaluate-environments/: .prime-managed-link
.prime/skills/optimize-environments/: .prime-managed-link
.prime/skills/optimize-with-environments/: .prime-managed-link
.prime/skills/review-environments/: .prime-managed-link
.prime/skills/train-with-environments/: .prime-managed-link
configs/eval/: condottiere-hosted.toml  condottiere-kimi-smoke.toml  condottiere-local.toml  gpt-oss.toml
environments/condottiere/: README.md  analysis.py  condottiere.py  engine.py  pyproject.toml
environments/condottiere/.prime/: .env-metadata.json
environments/condottiere/tests/: test_analysis.py  test_engine.py  test_environment.py
