[project]
name = "condottiere"
version = "0.0.12"
description = "Condottiere budgeting environment for Prime Intellect verifiers"
readme = "README.md"
requires-python = ">=3.11"
tags = ["budgeting", "game", "oracle", "multi-turn", "verifiers"]
dependencies = [
    "verifiers==0.1.14",
    "datasets>=2.20.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "condottiere.py",
    "engine.py",
    "analysis.py",
    "README.md",
    "pyproject.toml",
]

[tool.verifiers.eval]
num_examples = 1
rollouts_per_example = 1
